--- a/TheEvent/Challenge/index.html
+++ b/TheEvent/Challenge/index.html
@@ -49,33 +49,10 @@
 
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a href="index.html" class="active">Home</a></li>
-
-					<li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
-						<ul>
-							<li><a href="about.html">About</a></li>
-							<li><a href="team.html">Team</a></li>
-							<li><a href="testimonials.html">Testimonials</a></li>
-
-							<li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
-										class="bi bi-chevron-right"></i></a>
-								<ul>
-									<li><a href="#">Deep Drop Down 1</a></li>
-									<li><a href="#">Deep Drop Down 2</a></li>
-									<li><a href="#">Deep Drop Down 3</a></li>
-									<li><a href="#">Deep Drop Down 4</a></li>
-									<li><a href="#">Deep Drop Down 5</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="pricing.html">Pricing</a></li>
-					<li><a href="blog.html">Blog</a></li>
-
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="index.html" class="getstarted">Get Started</a></li>
+					<li><a href="index.html" class="active">Accueil</a></li>
+					<li><a href="#prix">Informations</a></li>
+					<li><a href="#dates">Dates Importantes</a></li>
+					<li><a href="#about" class="getstarted">Participer</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
 			</nav><!-- .navbar -->
@@ -95,7 +72,7 @@
 			<div class="carousel-inner" role="listbox">
 
 				<!-- Slide 1 -->
-				<div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg)">
+				<div class="carousel-item active" style="background-image: url(assets/img/image1.jpg)">
 					<div class="carousel-container">
 						<div class="container">
 							<h2 class="animate__animated animate__fadeInDown">PEDAGOGIC AFRICA <span>SMART CITY
@@ -104,101 +81,15 @@
 								CHALLENGE-PASCC- est destiné aux candidats marocains & africains pour promouvoir les
 								compétences techniques & entrepreneurials de nos lauréats & nos porteurs de projets. ce
 								challenge est co-organisé par la JCI Casablanca et INNOVATEL Engenieering</p>
-							<a href="" data-bs-target='#heroCarousel' data-bs-slide-to='1'
-								class="btn-get-started animate__animated animate__fadeInUp scrollto">
-								Objectifs
-							</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- Slide 2 -->
-				<div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg)">
-					<div class="carousel-container">
-						<div class="container">
-							<h2 class="animate__animated animate__fadeInDown">Objectifs du challenge</h2>
-							<p class="animate__animated animate__fadeInUp">Faire émerger, développer et accompagner des
-								projets smart & innovants et soutenir la recherche & le développement dans le continent
-								africain dans les domaines suivants :
-							<ul class="objectifs d-flex flex-column align-items-start">
-								<li class="mb-2">
-									<i class="bi bi-arrow-right-square-fill me-3"></i>
-									Lighting & Energie
-								</li>
-								<li class="mb-2">
-									<i class="bi bi-arrow-right-square-fill me-3"></i>
-									Environnement durable
-								</li>
-								<li class="mb-2">
-									<i class="bi bi-arrow-right-square-fill me-3"></i>
-									Agriculture
-								</li>
-								<li class="mb-2">
-									<i class="bi bi-arrow-right-square-fill me-3"></i>
-									Parking & mobilité urbaine
-								</li>
-							</ul>
-							</p>
-
-							<a href="" data-bs-target='#heroCarousel' data-bs-slide-to='2'
-								class="btn-get-started animate__animated animate__fadeInUp scrollto">
-								Critères
-							</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- Slide 3 -->
-				<div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg)">
-					<div class="carousel-container">
-						<div class="container">
-							<h2 class="animate__animated animate__fadeInDown">Les Criteres d'élligibilités</h2>
-							<p class="animate__animated animate__fadeInUp">L'inscription au challenge est ouverte à
-								toute personne (étudiants, ingénieurs, designers, développeurs, entrepreneurs, startups,
-								citoyens…) tout âge, porteuse de projet ou non dans les domaines pré-cité en haut.
-
-							<p class="animate__animated animate__fadeInUp">Les projets doivent :</p>
-							<div class="w-50 animate__animated animate__fadeInUp">
-								<ul class="objectifs d-flex flex-column align-items-start ">
-									<li class=" mb-2">
-										<i class="bi bi-arrow-right-square-fill me-3"></i>
-										Générer une proposition de valeur
-									</li>
-									<li class="mb-2">
-										<i class="bi bi-arrow-right-square-fill me-3"></i>
-										Utiliser l’action entrepreneuriale
-									</li>
-									<li class="mb-2">
-										<i class="bi bi-arrow-right-square-fill me-3"></i>
-										Répondre à une ou plusieurs problématiques liées aux domaines déjà pré-cités
-									</li>
-									<li class="mb-2">
-										<i class="bi bi-arrow-right-square-fill me-3"></i>
-										Apporter une solution innovante
-									</li>
-									<li class="mb-2">
-										<i class="bi bi-arrow-right-square-fill me-3"></i>
-										Avoir une facilité d’exécution (Une vision clair et des concepts simples)
-									</li>
-								</ul>
-							</div>
-							</p>
 							<a href="#about"
-								class="btn-get-started animate__animated animate__fadeInUp scrollto">S'inscrire</a>
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">
+								Participer
+							</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-
-		<a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-		</a>
-
-		<a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-			<span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-		</a>
-
 		</div>
 	</section>
 	<!-- End Hero -->
@@ -206,15 +97,154 @@
 	<main id="main">
 
 		<!-- ======= About Section ======= -->
-		<section id="about" class="about">
-			<div class="container mb-5">
+		<section id="features" class="features">
+			<div class="container">
 
-				<div class="row content">
-					<div class="col-lg-6">
-						<h2>Dates Importantes</h2>
-						<h3>Voici les dates de chaque étape de processus du challenge</h3>
+				<div class="section-title">
+					<h2>A Propos</h2>
+					<p>Des informations sur le challenge</p>
+				</div>
+
+				<div class="row">
+					<div class="col-lg-3">
+						<ul class="nav nav-tabs flex-column">
+							<li class="nav-item">
+								<a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">Objectifs du
+									challenge</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" data-bs-toggle="tab" href="#tab-2">Les Criteres d'élligibilités</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" data-bs-toggle="tab" href="#tab-3">Lieu</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" data-bs-toggle="tab" href="#tab-4">Prix</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-lg-9 mt-4 mt-lg-0">
+						<div class="tab-content">
+
+							<div class="tab-pane active show" id="tab-1">
+								<div class="row">
+									<div class="col-lg-8 details order-2 order-lg-1">
+										<h3>Faire émerger, développer et accompagner des
+											projets smart & innovants et soutenir la recherche & le développement dans
+											le continent
+											africain dans les domaines suivants :</h3>
+										<p class="fst-italic">
+										<ul class="objectifs d-flex flex-column align-items-start">
+											<li class="mb-2">
+												<i class="bi bi-arrow-right-square-fill me-3"></i>
+												Lighting & Energie
+											</li>
+											<li class="mb-2">
+												<i class="bi bi-arrow-right-square-fill me-3"></i>
+												Environnement durable
+											</li>
+											<li class="mb-2">
+												<i class="bi bi-arrow-right-square-fill me-3"></i>
+												Agriculture
+											</li>
+											<li class="mb-2">
+												<i class="bi bi-arrow-right-square-fill me-3"></i>
+												Parking & mobilité urbaine
+											</li>
+										</ul>
+										</p>
+									</div>
+									<div class="col-lg-4 text-center order-1 order-lg-2">
+										<img src="assets/img/objectifs.png" alt="" class="img-fluid">
+									</div>
+								</div>
+							</div>
+
+							<div class="tab-pane" id="tab-2">
+								<div class="row">
+									<div class="col-lg-8 details order-2 order-lg-1">
+										<h3>L'inscription au challenge est ouverte à
+											toute personne (étudiants, ingénieurs, designers, développeurs,
+											entrepreneurs, startups,
+											citoyens…) tout âge, porteuse de projet ou non dans les domaines pré-cité en
+											haut.</h3>
+										<p class="fst-italic">
+											Les projets doivent :
+										<div class="w-100 animate__animated animate__fadeInUp">
+											<ul class="objectifs d-flex flex-column align-items-start ">
+												<li class=" mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Générer une proposition de valeur
+												</li>
+												<li class="mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Utiliser l’action entrepreneuriale
+												</li>
+												<li class="mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Répondre à une ou plusieurs problématiques liées aux domaines déjà
+													pré-cités
+												</li>
+												<li class="mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Apporter une solution innovante
+												</li>
+												<li class="mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Avoir une facilité d’exécution (Une vision clair et des concepts
+													simples)
+												</li>
+											</ul>
+										</div>
+										</p>
+										</p>
+									</div>
+									<div class="col-lg-4 text-center order-1 order-lg-2">
+										<img src="assets/img/criteres.png" alt="" class="img-fluid">
+									</div>
+								</div>
+							</div>
+
+							<div class="tab-pane" id="tab-3">
+								<div class="row">
+									<div class="col-lg-8 details order-2 order-lg-1">
+										<h3><br>Localisation</h3>
+										<p class="fst-italic"></p>
+										<p><br>Centre d'Innovation et Transfert de Technologie Casablanca, Maroc</p>
+									</div>
+									<div class="col-lg-4 text-center order-1 order-lg-2">
+										<img src="assets/img/lieu.png" alt="" class="img-fluid">
+									</div>
+								</div>
+							</div>
+
+							<div class="tab-pane" id="tab-4">
+								<div class="row">
+									<div class="col-lg-8 details order-2 order-lg-1">
+										<h3><br>Les 4 gagnants</h3>
+										<p><br><br>seront gratifiés de prix distingués et bénéficieront d'un
+											accompagnement et coaching sur mesure de la part de nos préstigieux
+											partenaires.</p>
+									</div>
+									<div class="col-lg-4 text-center order-1 order-lg-2">
+										<img src="assets/img/prix.png" alt="" class="img-fluid">
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
+
+			</div>
+		</section>
+		<section id="dates" class="about">
+			<div class="container mb-5">
+
+				<div class="section-title">
+					<h2>Programme</h2>
+					<p>Dates Importantes</p>
+				</div>
+
 
 			</div>
 			<div class="container">
@@ -311,7 +341,12 @@
 			<div class="container pt-5">
 				<form action="register.php" method="post" enctype="multipart/form-data">
 					<fieldset>
-						<legend>Information sur le candidat :</legend>
+
+						<div class="section-title">
+							<h2>Participer</h2>
+							<p>S'inscrire au challenge</p>
+						</div>
+
 						<div class="row">
 							<div class="mb-5 mt-3 h-25 d-flex justify-content-center align-items-end">
 								<img id="output" class="w-25 h-25 rounded-circle"
@@ -667,56 +702,38 @@
 			<div class="container">
 				<div class="row">
 
-					<div class="col-lg-3 col-md-6">
+					<div class="col-lg-3 col-md-5">
 						<div class="footer-info">
-							<h3>Innovatel</h3>
-							<p>
-								A108 Adam Street <br>
-								NY 535022, USA<br><br>
-								<strong>Phone:</strong> +1 5589 55488 55<br>
-								<strong>Email:</strong> info@example.com<br>
+							<a href="index.html" class="logo me-auto"><img src="assets/img/Inno-logo.png" alt=""
+									class="img-fluid"></a>
+							<p class="mt-3">
+								<strong>Tel: </strong>+212 675 670 238<br>
+								<strong>Email: </strong>innovateleng@gmail.com<br>
+								<strong>Site: </strong>www.innovatel.ma</br>
 							</p>
 							<div class="social-links mt-3">
-								<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-								<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-								<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-								<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-								<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+								<a href="https://www.instagram.com/innovatel_engineering/" class="instagram"><i
+										class="bx bxl-instagram"></i></a>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-lg-2 col-md-6 footer-links">
-						<h4>Useful Links</h4>
+						<h4>Liens Utils</h4>
 						<ul>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="index.html">Accueil</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#prix">A propos</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#dates">Dates Importantes</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#about">Inscription</a></li>
 						</ul>
 					</div>
-
-					<div class="col-lg-3 col-md-6 footer-links">
-						<h4>Our Services</h4>
+					<div class="col-lg-2 col-md-6 footer-links">
+						<h4>Explorer</h4>
 						<ul>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="/TheEvent/index.html">Evenement</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="www.innovatel.ma">Innovatel</a></li>
 						</ul>
 					</div>
-
-					<div class="col-lg-4 col-md-6 footer-newsletter">
-						<h4>Our Newsletter</h4>
-						<p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-						<form action="" method="post">
-							<input type="email" name="email"><input type="submit" value="Subscribe">
-						</form>
-
-					</div>
-
 				</div>
 			</div>
 		</div>
