--- a/TheEvent/index.html
+++ b/TheEvent/index.html
@@ -420,10 +420,69 @@
 										<h4>Smart Mobilité Urbaine et Infrastructure Territoriale au Service de Smart
 											Cities</h4>
 										<span class="mt-3">Intervenants : </span>
-										<div class="row">
-											<div class="col-md-6"><img src="assets/img/int1.png" alt="hello"></div>
-											<div class="col-md-6"><img src="assets/img/int2.png" alt="hello"></div>
-										</div>
+										<ul>
+											<li>
+												L’Impact de la Sûreté de
+												la Ville sur la Sécurité des
+												Citoyens
+												<ul>
+													<li>
+														Maître
+														d’ouvrage
+													</li>
+													<li>
+														Wilaya
+														de la Ville de
+														Marrakech
+													</li>
+													<li>
+														Association
+														représentante
+														des Citoyens
+													</li>
+													<li>
+														Wilaya de
+														Grand
+														Casablanca
+													</li>
+													<li>
+														Group Hanwha et
+														AB Protection
+													</li>
+													<li>
+														BET:
+														SEFTYMAR
+													</li>
+												</ul>
+											</li>
+											<li>
+												La Fluidité de la Route
+												contre la Congestion de la
+												Circulation Routière
+												<ul>
+													<li>
+														BET : INNOVATEL
+														ENGINEERING
+													</li>
+													<li>
+														Maître
+														d’ouvrage
+
+													</li>
+													<li>
+														SociétéIntégrateur
+														ou fabricant des
+														Solutions (Sponsor
+														de l’Evènement)
+													</li>
+													<li>
+														Association
+														représentante
+														des Citoyens
+													</li>
+												</ul>
+											</li>
+										</ul>
 									</li>
 									<li>
 										<h4>L’intelligence du Transport Public Vert et écologique
@@ -579,80 +638,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- End Schdule Day 2 -->
-
-					<!-- Schdule Day 3 -->
-					<div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
-
-						<div class="row schedule-item">
-							<div class="col-md-2"><time>10:00 AM</time></div>
-							<div class="col-md-10">
-								<div class="speaker">
-									<img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
-								</div>
-								<h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
-								<p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
-							</div>
-						</div>
-
-						<div class="row schedule-item">
-							<div class="col-md-2"><time>11:00 AM</time></div>
-							<div class="col-md-10">
-								<div class="speaker">
-									<img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
-								</div>
-								<h4>Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span></h4>
-								<p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
-							</div>
-						</div>
-
-						<div class="row schedule-item">
-							<div class="col-md-2"><time>12:00 AM</time></div>
-							<div class="col-md-10">
-								<div class="speaker">
-									<img src="assets/img/speakers/1.jpg" alt="Brenden Legros">
-								</div>
-								<h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
-								<p>Facere provident incidunt quos voluptas.</p>
-							</div>
-						</div>
-
-						<div class="row schedule-item">
-							<div class="col-md-2"><time>02:00 PM</time></div>
-							<div class="col-md-10">
-								<div class="speaker">
-									<img src="assets/img/speakers/4.jpg" alt="Jack Christiansen">
-								</div>
-								<h4>Qui non qui vel amet culpa sequi. <span>Jack Christiansen</span></h4>
-								<p>Nam ex distinctio voluptatem doloremque suscipit iusto.</p>
-							</div>
-						</div>
-
-						<div class="row schedule-item">
-							<div class="col-md-2"><time>03:00 PM</time></div>
-							<div class="col-md-10">
-								<div class="speaker">
-									<img src="assets/img/speakers/5.jpg" alt="Alejandrin Littel">
-								</div>
-								<h4>Quos ratione neque expedita asperiores. <span>Alejandrin Littel</span></h4>
-								<p>Eligendi quo eveniet est nobis et ad temporibus odio quo.</p>
-							</div>
-						</div>
-
-						<div class="row schedule-item">
-							<div class="col-md-2"><time>04:00 PM</time></div>
-							<div class="col-md-10">
-								<div class="speaker">
-									<img src="assets/img/speakers/6.jpg" alt="Willow Trantow">
-								</div>
-								<h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
-								<p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
-							</div>
-						</div>
-
-					</div>
-					<!-- End Schdule Day 2 -->
-
 				</div>
 
 			</div>
