--- a/TheEvent/index.html
+++ b/TheEvent/index.html
@@ -254,16 +254,16 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-header">
 					<h2>Expositions</h2>
-					<p>Here are some of our speakers</p>
+					<p>L'espace du déroulement de l'l’évènement</p>
 				</div>
 
 				<div class="row">
 					<div class="col-lg-4 col-md-6">
 						<div class="speaker" data-aos="fade-up" data-aos-delay="100">
-							<img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+							<img src="assets/img/expositions/salle_de_conference2.jpg" alt="Speaker 1" class="img-fluid">
 							<div class="details">
-								<h3><a href="exposition.html">Brenden Legros</a></h3>
-								<p>Savoir plus</p>
+								<h3><a href="exposition.html">Explorer</a></h3>
+								<p></p>
 								<div class="social">
 
 								</div>
@@ -272,10 +272,10 @@
 					</div>
 					<div class="col-lg-4 col-md-6">
 						<div class="speaker" data-aos="fade-up" data-aos-delay="200">
-							<img src="assets/img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
+							<img src="assets/img/expositions/rend 2 1.jpg" alt="Speaker 2" class="img-fluid">
 							<div class="details">
-								<h3><a href="exposition.html">Hubert Hirthe</a></h3>
-								<p>Savoir plus</p>
+								<h3><a href="exposition.html">Explorer</a></h3>
+								<p></p>
 								<div class="social">
 
 								</div>
@@ -284,10 +284,10 @@
 					</div>
 					<div class="col-lg-4 col-md-6">
 						<div class="speaker" data-aos="fade-up" data-aos-delay="300">
-							<img src="assets/img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
+							<img src="assets/img/expositions/salle_de_conference1.jpg" alt="Speaker 3" class="img-fluid">
 							<div class="details">
-								<h3><a href="exposition.html">Cole Emmerich</a></h3>
-								<p>Savoir plus</p>
+								<h3><a href="exposition.html">Explorer</a></h3>
+								<p></p>
 								<div class="social">
 
 								</div>
@@ -845,28 +845,28 @@
 
 					<div class="col-lg-3 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=1"><img src="assets/img/supporters/1.png"
+							<a href="Sponsoring/index.php?form_id=1"><img src="assets/img/sponsor/partenaire.png"
 									class="img-fluid" alt=""></a>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=2"><img src="assets/img/supporters/2.png"
+							<a href="Sponsoring/index.php?form_id=2"><img src="assets/img/sponsor/platpng.png"
 									class="img-fluid" alt=""></a>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=3"><img src="assets/img/supporters/3.png"
+							<a href="Sponsoring/index.php?form_id=3"><img src="assets/img/sponsor/gold.png"
 									class="img-fluid" alt=""></a>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=4"><img src="assets/img/supporters/4.png"
+							<a href="Sponsoring/index.php?form_id=4"><img src="assets/img/sponsor/silver.png"
 									class="img-fluid" alt=""></a>
 						</div>
 					</div>
