--- a/TheEvent/exposition.html
+++ b/TheEvent/exposition.html
@@ -69,7 +69,7 @@
 
         <div class="row">
           <div class="col-md-3">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/expositions/dome_type_1.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-3">
@@ -86,7 +86,7 @@
           </div>
 
           <div class="col-md-3">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/expositions/dome_type_2.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-3">
@@ -106,7 +106,7 @@
 
         <div class="row mt-5">
           <div class="col-md-3">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/expositions/dome_type_3.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-3">
@@ -123,7 +123,7 @@
           </div>
 
           <div class="col-md-3">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/expositions/dome_type_4.png" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-3">
@@ -143,7 +143,7 @@
 
         <div class="row mt-5">
           <div class="col-md-3">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/expositions/grand dome 1.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-3">
@@ -159,16 +159,21 @@
 
         </div>
 
+        <div class="section-header">
+          <h2></h2>
+          <p></p>
+        </div>
+
         <div class="row mt-5 d-flex justify-content-center">
 
-          <div class="col-md-3">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+          <div class="col-md-6">
+            <img src="assets/img/expositions/espace_exposition_3.png" alt="Speaker 1" class="img-fluid">
           </div>
-          <div class="col-md-3">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+          <div class="col-md-6">
+            <img src="assets/img/expositions/espace_exposition_1.png" alt="Speaker 1" class="img-fluid">
           </div>
-          <div class="col-md-3">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+          <div class="col-md-6">
+            <img src="assets/img/expositions/espace_exposition_2.png" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-3">
@@ -189,12 +194,18 @@
           </div>
 
         </div>
+
+        <div class="section-header">
+          <h2></h2>
+          <p></p>
+        </div>
+
         <div class="row mt-5">
           <div class="col-md-4">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/expositions/rend 1.jpg" alt="Speaker 1" class="img-fluid">
           </div>
           <div class="col-md-4">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/expositions/rend 2 1.jpg" alt="Speaker 1" class="img-fluid">
           </div>
           <div class="col-md-4">
             <div class="details">
@@ -212,12 +223,17 @@
           </div>
         </div>
 
+        <div class="section-header">
+          <h2></h2>
+          <p></p>
+        </div>
+
         <div class="row mt-5">
           <div class="col-md-4">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/expositions/salle_de_conference1.jpg" alt="Speaker 1" class="img-fluid">
           </div>
           <div class="col-md-4">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/expositions/salle_de_conference2.jpg" alt="Speaker 1" class="img-fluid">
           </div>
           <div class="col-md-4">
             <div class="details">
