--- a/TheEvent/Challenge/index.html
+++ b/TheEvent/Challenge/index.html
@@ -49,8 +49,10 @@
 			<nav id="navbar" class="navbar">
 				<ul>
 					<li><a href="index.html" class="active">Accueil</a></li>
-					<li><a href="#prix">Informations</a></li>
+					<li><a href="#features">Informations</a></li>
+					<li><a href="#jury">Jury</a></li>
 					<li><a href="#dates">Dates Importantes</a></li>
+					<li><a href="#supporters">Sponsors/Partenaires</a></li>
 					<li><a href="#about" class="getstarted">Participer</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
@@ -71,7 +73,7 @@
 			<div class="carousel-inner" role="listbox">
 
 				<!-- Slide 1 -->
-				<div class="carousel-item active" style="background-image: url(assets/img/3.jpg)">
+				<div class="carousel-item active" style="background-image: url(assets/img/ville\ innovatel.png)">
 					<div class="carousel-container">
 						<div class="container">
 							<h2 class="animate__animated animate__fadeInDown">PEDAGOGIC AFRICA <span>SMART CITY
@@ -79,7 +81,7 @@
 							<p class="animate__animated animate__fadeInUp">Le challenge PEDAGOGIC AFRICA SMART CITY
 								CHALLENGE-PASCC- est destiné aux candidats marocains & africains pour promouvoir les
 								compétences techniques & entrepreneurials de nos lauréats & nos porteurs de projets. ce
-								challenge est co-organisé par la JCI Casablanca et INNOVATEL Engenieering</p>
+								challenge est fondé par INNOVATEL ENGINEERING et co-organisé par INNOVATEL ENGINEERING et la JCI Casablanca</p>
 							<a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">
 								Participer
 							</a>
@@ -226,6 +228,127 @@
 									</div>
 									<div class="col-lg-4 text-center order-1 order-lg-2">
 										<img src="assets/img/prix.png" alt="" class="img-fluid">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</section>
+
+		<section id="jury" class="features">
+			<div class="container">
+
+				<div class="section-title">
+					<h2>Jury</h2>
+					<p>Le Jury</p>
+				</div>
+
+				<div class="row">
+					<div class="col-lg-3">
+						<ul class="nav nav-tabs flex-column">
+							<li class="nav-item">
+								<a class="nav-link active show" data-bs-toggle="tab" href="#tabb-1">Mission</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" data-bs-toggle="tab" href="#tabb-2">Composition</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" data-bs-toggle="tab" href="#tabb-3">Critères de sélection</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-lg-9 mt-4 mt-lg-0">
+						<div class="tab-content">
+
+							<div class="tab-pane active show" id="tabb-1">
+								<div class="row">
+									<div class="col-lg-8 details order-2 order-lg-1">
+										<h3>Mission :</h3>
+										<p class="fst-italic">
+										<ul class="objectifs d-flex flex-column align-items-start">
+											<li class="mb-2">
+												<i class="bi bi-arrow-right-square-fill me-3"></i>
+												Examiner chaque invention et innovation présentée au Forum
+											</li>
+											<li class="mb-2">
+												<i class="bi bi-arrow-right-square-fill me-3"></i>
+												Valoriser et évaluer le inventions retenus sur la base des critères
+												Prédéfinis
+											</li>
+										</ul>
+										</p>
+									</div>
+									<div class="col-lg-4 text-center order-1 order-lg-2">
+										<img src="assets/img/mission.png" alt="" class="img-fluid">
+									</div>
+								</div>
+							</div>
+
+							<div class="tab-pane" id="tabb-2">
+								<div class="row">
+									<div class="col-lg-8 details order-2 order-lg-1">
+										<h3>Composition</h3>
+										<p class="fst-italic">
+										<div class="w-100 animate__animated animate__fadeInUp">
+											<ul class="objectifs d-flex flex-column align-items-start ">
+												<li class=" mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Un Président du comité Scienctifique et Technique
+												</li>
+												<li class="mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Un Expert Financier
+												</li>
+												<li class="mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Un Expert universitaire
+												</li>
+												<li class="mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Des membres des sponsors du Forum
+												</li>
+												<li class="mb-2">
+											</ul>
+										</div>
+										</p>
+										</p>
+									</div>
+									<div class="col-lg-4 text-center order-1 order-lg-2">
+										<img src="assets/img/criteres.png" alt="" class="img-fluid">
+									</div>
+								</div>
+							</div>
+
+							<div class="tab-pane" id="tabb-3">
+								<div class="row">
+									<div class="col-lg-8 details order-2 order-lg-1">
+										<h3>Critères de sélection</h3>
+										<p class="fst-italic">
+										<div class="w-100 animate__animated animate__fadeInUp">
+											<ul class="objectifs d-flex flex-column align-items-start ">
+												<li class=" mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Qualité scientifique et technologique du projet d'invention /
+													innovation
+												</li>
+												<li class="mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Profil économique à potentiel de développement durable
+												</li>
+												<li class="mb-2">
+													<i class="bi bi-arrow-right-square-fill me-3"></i>
+													Esprit d'entreprendre de l'inveteur et de l'innovateur
+												</li>
+											</ul>
+										</div>
+										</p>
+										</p>
+									</div>
+									<div class="col-lg-4 text-center order-1 order-lg-2">
+										<img src="assets/img/criteres.png" alt="" class="img-fluid">
 									</div>
 								</div>
 							</div>
@@ -697,7 +820,50 @@
 				</form>
 			</div>
 		</section>
-<!-- End About Section -->
+		<!-- End About Section -->
+		<section id="supporters" class="section-with-bg">
+
+			<div class="container" data-aos="fade-up">
+				<div class="section-title">
+					<h2>Sponsors</h2>
+					<p>Sponsors / Partenaires</p>
+				</div>
+
+				<div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
+
+					<div class="col-lg-3 col-md-4 col-xs-6">
+						<div class="supporter-logo">
+							<img src="assets/img/jci.png" class="img-fluid" alt="">
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-4 col-xs-6">
+						<div class="supporter-logo">
+							<a href="Sponsoring/index.php?form_id=2"><img src="assets/img/sponsor/platpng.png"
+									class="img-fluid" alt=""></a>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-4 col-xs-6">
+						<div class="supporter-logo">
+							<a href="Sponsoring/index.php?form_id=3"><img src="assets/img/sponsor/gold.png"
+									class="img-fluid" alt=""></a>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-4 col-xs-6">
+						<div class="supporter-logo">
+							<a href="Sponsoring/index.php?form_id=4"><img src="assets/img/sponsor/silver.png"
+									class="img-fluid" alt=""></a>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
+		</section>
+
 		<section id="contact" class="section-bg">
 
 			<div class="container" data-aos="fade-up">
@@ -772,9 +938,12 @@
 					<div class="col-lg-3 col-md-6 social-links">
 
 						<h4>Nous suivre</h4>
-						<a href="https://www.facebook.com/innovatelengineering" class="facebook"><i class="bi bi-facebook"></i></a>
-						<a href="https://www.instagram.com/innovatel_engineering/" class="instagram"><i class="bi bi-instagram"></i></a>
-						<a href="https://www.linkedin.com/company/innovatel-engineering/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+						<a href="https://www.facebook.com/innovatelengineering" class="facebook"><i
+								class="bi bi-facebook"></i></a>
+						<a href="https://www.instagram.com/innovatel_engineering/" class="instagram"><i
+								class="bi bi-instagram"></i></a>
+						<a href="https://www.linkedin.com/company/innovatel-engineering/" class="linkedin"><i
+								class="bi bi-linkedin"></i></a>
 
 					</div>
 
@@ -786,7 +955,8 @@
 		</div>
 	</footer><!-- End  Footer -->
 
-	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+			class="bi bi-arrow-up-short"></i></a>
 
 	<!-- Vendor JS Files -->
 	<script src="assets/vendor/aos/aos.js"></script>
