--- a/TheEvent/index.html
+++ b/TheEvent/index.html
@@ -75,7 +75,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<h2>A propos de l'événement</h2>
-						<p>Le Salon Pedagogic Africa Smart City a pour but de partager l’innovation, de promouvoir le
+						<p class="word-break">Le Salon Pedagogic Africa Smart City a pour but de partager l’innovation, de promouvoir le
 							progrès et
 							d’encourager la coopération autour des grands défis de nos sociétés. Cet évènement sera un
 							moment
