--- a/TheEvent/exposition.html
+++ b/TheEvent/exposition.html
@@ -67,12 +67,16 @@
           <p>Des informations sur les espaces de l'évènement</p>
         </div>
 
-        <div class="row">
-          <div class="col-md-3">
+        <div class="row mb-5">
+          <div class="col-md-6">
             <img src="assets/img/expositions/dome_type_1.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-3">
+            <img src="assets/img/expositions/dome1.png" alt="Speaker 1" class="img-fluid">
+          </div>
+
+          <div class="col-md-3 d-flex align-items-center">
             <div class="details">
               <h2>Dome Type 1</h2>
               <div class="social">
@@ -84,12 +88,17 @@
 
             </div>
           </div>
-
-          <div class="col-md-3">
+        </div>
+        <div class="row mb-5">
+          <div class="col-md-6">
             <img src="assets/img/expositions/dome_type_2.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-3">
+            <img src="assets/img/expositions/dome2.png" alt="Speaker 1" class="img-fluid">
+          </div>
+
+          <div class="col-md-3 d-flex align-items-center">
             <div class="details">
               <h2>Dome Type 2</h2>
               <div class="social">
@@ -104,12 +113,16 @@
 
         </div>
 
-        <div class="row mt-5">
-          <div class="col-md-3">
+        <div class="row mb-5">
+          <div class="col-md-6">
             <img src="assets/img/expositions/dome_type_3.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-3">
+            <img src="assets/img/expositions/dome3.png" alt="Speaker 1" class="img-fluid">
+          </div>
+
+          <div class="col-md-3 d-flex align-items-center">
             <div class="details">
               <h2>Dome Type 3</h2>
               <div class="social">
@@ -122,11 +135,18 @@
             </div>
           </div>
 
-          <div class="col-md-3">
+        </div>
+
+        <div class="row mb-5 d-flex justify-content-center">
+          <div class="col-md-4">
             <img src="assets/img/expositions/dome_type_4.png" alt="Speaker 1" class="img-fluid">
           </div>
 
-          <div class="col-md-3">
+          <div class="col-md-3 d-flex align-items-center">
+            <img src="assets/img/expositions/dome4_.png" alt="Speaker 1" class="img-fluid">
+          </div>
+
+          <div class="col-md-2 d-flex align-items-center">
             <div class="details">
               <h2>Dome Type 4</h2>
               <div class="social">
@@ -141,19 +161,17 @@
 
         </div>
 
-        <div class="row mt-5">
-          <div class="col-md-3">
+        <div class="row mb-5 d-flex justify-content-start">
+          <div class="col-md-6">
             <img src="assets/img/expositions/grand dome 1.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
-          <div class="col-md-3">
+          <div class="col-md-4 d-flex align-items-center">
             <div class="details">
               <h2>Dome Type 5</h2>
               <div class="social">
-
               </div>
               <p>Restauration</p>
-
             </div>
           </div>
 
@@ -265,6 +283,7 @@
               <i class="bi bi-geo-alt"></i>
               <h3>Adresse</h3>
               <address>42, Bd Zerktouni, 2nd floor, Office N°6, Casablanca<br></address>
+              <address>47, Street Ait Ba Amrane, Casablanca<br></address>
             </div>
           </div>
 
@@ -273,6 +292,7 @@
               <i class="bi bi-phone"></i>
               <h3>Numéro du téléphone</h3>
               <p>+212 (5) 22 22 52 63</p>
+              <p>+212 522 400 912</p>
             </div>
           </div>
 
