--- a/TheEvent/index.html
+++ b/TheEvent/index.html
@@ -46,11 +46,12 @@
 					<li><a class="nav-link scrollto" href="#schedule">Programme</a></li>
 					<li><a class="nav-link scrollto" href="#venue">GALA B2B</a></li>
 					<li><a class="nav-link scrollto" href="#hotels">Editions</a></li>
-					<li><a class="nav-link scrollto" href="#supporters">Sponsors</a></li>
+					<li><a class="nav-link scrollto" href="Sponsors.html">Sponsors/Partenaires</a></li>
 					<li><a class="nav-link scrollto" href="#contact">Contact</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
 			</nav><!-- .navbar -->
+			<a class="buy-tickets scrollto" href="#supporters">Devenir Sponsor</a>
 			<a class="buy-tickets scrollto" href="Challenge/index.html">Challenge</a>
 		</div>
 	</header><!-- End Header -->
@@ -75,7 +76,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<h2>A propos de l'événement</h2>
-						<p class="word-break">Le Salon Pedagogic Africa Smart City a pour but de partager l’innovation, de promouvoir le
+						<p>Le Salon Pedagogic Africa Smart City a pour but de partager l’innovation, de promouvoir le
 							progrès et
 							d’encourager la coopération autour des grands défis de nos sociétés. Cet évènement sera un
 							moment
@@ -253,14 +254,14 @@
 		<section id="speakers">
 			<div class="container" data-aos="fade-up">
 				<div class="section-header">
-					<h2>Expositions</h2>
+					<h2>Espaces Expositions</h2>
 					<p>L'espace du déroulement de l'l’évènement</p>
 				</div>
 
 				<div class="row">
 					<div class="col-lg-4 col-md-6">
 						<div class="speaker" data-aos="fade-up" data-aos-delay="100">
-							<img src="assets/img/expositions/salle_de_conference2.jpg" alt="Speaker 1" class="img-fluid">
+							<img src="assets/img/rend.jpg" alt="Speaker 1" class="img-fluid">
 							<div class="details">
 								<h3><a href="exposition.html">Explorer</a></h3>
 								<p></p>
@@ -287,6 +288,43 @@
 							<img src="assets/img/expositions/salle_de_conference1.jpg" alt="Speaker 3" class="img-fluid">
 							<div class="details">
 								<h3><a href="exposition.html">Explorer</a></h3>
+								<p></p>
+								<div class="social">
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			</div>
+
+		</section>
+		<!-- End Speakers Section -->
+		<section id="speakers">
+			<div class="container" data-aos="fade-up">
+				<div class="section-header">
+					<h2>Comité Technologique</h2>
+				</div>
+
+				<div class="row d-flex justify-content-center">
+					<div class="col-lg-4 col-md-6">
+						<div class="speaker" data-aos="fade-up" data-aos-delay="100">
+							<img src="assets/img//speakers/3.jpg" alt="Speaker 1" class="img-fluid">
+							<div class="details">
+								<h3><a href="exposition.html">Nom Prenom</a></h3>
+								<p></p>
+								<div class="social">
+
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="speaker" data-aos="fade-up" data-aos-delay="200">
+							<img src="assets/img/speakers/4.jpg" alt="Speaker 2" class="img-fluid">
+							<div class="details">
+								<h3><a href="exposition.html">Nom Prenom</a></h3>
 								<p></p>
 								<div class="social">
 
@@ -608,8 +646,8 @@
 								<p>Dans le but de valoriser les start-ups qui ont remporté les prix des
 									4 meilleurs projets, dans une ambiance festive et chaleureuse, le
 									Pédagogic Africa Smart City lance un Gala B2B sous le thème : «
-									Une Ville Intelligente, une réponse aux défis de demain », qui
-									sera organisé le 9 November à la Cité d’Innovation et Transfert
+									LA CULTURE MAROCAINE AU SERVICE DE SMART CITIES », qui
+									sera organisé le 10 November à la Cité d’Innovation et Transfert
 									de Technologie Casablanca, pour un bon partage et pour
 									commémorer cette excellence et réussite ainsi pour renouer des
 									relations avec nos invités et parties prenantes.</p>
@@ -723,16 +761,7 @@
 
 				<div class="row" data-aos="fade-up" data-aos-delay="100">
 
-					<div class="col-lg-4 col-md-8 d-flex justify-content-center">
-						<div class="hotel">
-							<div class="hotel-img">
-								<img src="assets/img/8.png" alt="Hotel 1" class="img-fluid">
-							</div>
-						</div>
-					</div>
-
-
-					<div class="col-lg-4 col-md-6 d-flex justify-content-end">
+					<div class="col-lg-6 col-md-6 d-flex justify-content-end">
 						<div class="hotel">
 							<div class="hotel-img">
 								<img src="assets/img/9.png" alt="Hotel 2" class="img-fluid">
@@ -740,7 +769,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-md-6 d-flex justify-content-start">
+					<div class="col-lg-6 col-md-6 d-flex justify-content-start">
 						<div class="hotel">
 							<div class="hotel-img">
 								<img src="assets/img/10.png" alt="Hotel 3" class="img-fluid">
@@ -841,33 +870,51 @@
 					<h2>Formules Sponsor</h2>
 				</div>
 
-				<div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
+				<div class="row no-gutters supporters-wrap clearfix d-flex justify-content-end" data-aos="zoom-in" data-aos-delay="100">
 
-					<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="col-lg-2 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=1"><img src="assets/img/sponsor/partenaire.png"
+							<a href="Sponsoring/index.php?form_id=1"><img src="assets/img/gold.png"
 									class="img-fluid" alt=""></a>
+						</div>
+						<div class="supporter-logo">
+							<a href="Sponsoring/index.php?form_id=1"><h3>Partenaire</h3></a>
 						</div>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="col-lg-2 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=2"><img src="assets/img/sponsor/platpng.png"
+							<a href="Sponsoring/index.php?form_id=2"><img src="assets/img/Silver.png"
 									class="img-fluid" alt=""></a>
+						</div>
+						<div class="supporter-logo">
+							<a href="Sponsoring/index.php?form_id=2"><h3>Platinum</h3></a>
 						</div>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="col-lg-2 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=3"><img src="assets/img/sponsor/gold.png"
+							<a href="Sponsoring/index.php?form_id=3"><img src="assets/img/gold.png"
 									class="img-fluid" alt=""></a>
+						</div>
+						<div class="supporter-logo">
+							<a href="Sponsoring/index.php?form_id=3"><h3>Gold</h3></a>
 						</div>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="col-lg-2 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=4"><img src="assets/img/sponsor/silver.png"
+							<a href="Sponsoring/index.php?form_id=4"><img src="assets/img/Silver.png"
 									class="img-fluid" alt=""></a>
+						</div>
+						<div class="supporter-logo">
+							<a href="Sponsoring/index.php?form_id=4"><h3>Silver</h3></a>
+						</div>
+					</div>
+
+					<div class="col-lg-2 col-md-4 col-xs-6">
+						<div class="supporter-logo">
+							<a class="buy-tickets scrollto" href="Sponsoring/sponsor.php">Devenir Sponsor</a>
 						</div>
 					</div>
 
@@ -893,6 +940,7 @@
 							<i class="bi bi-geo-alt"></i>
 							<h3>Adresse</h3>
 							<address>42, Bd Zerktouni, 2nd floor, Office N°6, Casablanca<br></address>
+							<address>47, Street Ait Ba Amrane, Casablanca<br></address>
 						</div>
 					</div>
 
@@ -901,6 +949,7 @@
 							<i class="bi bi-phone"></i>
 							<h3>Numéro du téléphone</h3>
 							<p>+212 (5) 22 22 52 63</p>
+							<p>+212 522 400 912</p>
 						</div>
 					</div>
 
