added some stuff

--- a/TheEvent/Challenge/index.html
+++ b/TheEvent/Challenge/index.html
@@ -48,6 +48,7 @@
 			<!-- Uncomment below if you prefer to use an image logo -->
 			<a href="index.html" class="logo me-auto"><img src="assets/img/Identité visuelle challenge.jpg" alt="" class="img-fluid"></a>
 			<a href="index.html" class="logo me-auto"><img src="assets/img/Inno-logo.png" alt="" class="img-fluid"></a>
+			<a href="index.html" class="logo me-auto"><img src="assets/img/jci.png" alt="" class="img-fluid"></a>
 
 
 			<nav id="navbar" class="navbar">
@@ -164,13 +165,16 @@
 											solutions SMARTS pour des villes SMARTS reposant sur les nouvelles
 											technologies
 											comme levier essentiel pour façonner l’avenir du continent.
+											<br><br>
 											Le challenge est une opportunité pour accompagner, former et mentorer nos
 											participants, pour améliorer, tester, perfectionner leurs solutions et
 											trouver des
 											futurs investisseurs de leurs projets.
+											<br><br>
 											Les participants vont passer par plusieurs étapes dans l&#39;objectif de
 											sélectionner à
 											la fin du challenge un gagnant par domaine.
+											<br><br>
 											Votre aventure alors, en tant que participants, commencera par une
 											soumission
 											de dossier de candidature, et passera par une étape de sélections, qui vous
@@ -182,10 +186,10 @@
 											qualifier les
 											participants à la base des pitchs, des dossiers, et de la prestation lors de
 											la phase
-											de préparation.
+											de préparation.<br><br>
 											La clôture du challenge sera couronnée par une cérémonie de remise des prix,
 											et
-											de pitch devant nos invités.
+											de pitch devant nos invités.<br><br>
 
 											INNOVATEL Engineering et la JCI Casablanca lors de ce challenge, offrent aux
 											participants et à ses partenaires une opportunité pour se rencontrer, pour
@@ -1090,7 +1094,7 @@
 
 					<div class="col-lg-3 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<img src="assets/img/ibtikarcom.png" class="img-fluid" alt="">
+							<img src="assets/img/ibtikarcom.pngg" class="img-fluid" alt="">
 						</div>
 					</div>
 
