--- a/TheEvent/index.html
+++ b/TheEvent/index.html
@@ -63,7 +63,7 @@
 			<h1 class="mb-4 pb-0"><span>SOUS LE THÈME </span>: INGÉNIERIE MAROCAINE AU SERVICE DE LA VILLE INTELLIGENTE
 			</h1>
 			<p class="mb-4 pb-0">8-10 Novembre, Cité d’Innovation et Transfert de Technologie Casablanca</p>
-			<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>
+			<a href="https://www.facebook.com/100005571403696/posts/pfbid0mXvNzhEmiyDSmuYRJKe2dozTvWqmLgpxKjyQjzLjdn9AFkuBABBiPv6wRq7u8uxhl/" class="glightbox play-btn mb-4"></a>
 			<a href="#about" class="about-btn scrollto">A propos de l'événement</a>
 		</div>
 	</section><!-- End Hero Section -->
@@ -878,7 +878,7 @@
 									class="img-fluid" alt=""></a>
 						</div>
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=1"><h3>Partenaire</h3></a>
+							<a href="Sponsoring/index.php?form_id=1"><h3>Sponsor Officiel</h3></a>
 						</div>
 					</div>
 
@@ -909,6 +909,16 @@
 						</div>
 						<div class="supporter-logo">
 							<a href="Sponsoring/index.php?form_id=4"><h3>Silver</h3></a>
+						</div>
+					</div>
+
+					<div class="col-lg-2 col-md-4 col-xs-6">
+						<div class="supporter-logo">
+							<a href="Sponsoring/index.php?form_id=5"><img src="assets/img/gold.png"
+									class="img-fluid" alt=""></a>
+						</div>
+						<div class="supporter-logo">
+							<a href="Sponsoring/index.php?form_id=5"><h3>Partenaire</h3></a>
 						</div>
 					</div>
 
